<resources>
    <string name="app_name">CryptoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="sorting_title">Set Sort Order</string>
    <string name="tags_title">Set filter tags</string>
    <string name="time_period_title">Set Time Period</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_dialog_title">Enter your email address</string>
    <string name="reset">Reset</string>
    <string name="update">Update</string>
    <string name="update_password">Update Password</string>
    <string name="error">Field is required</string>
    <string name="password_error">Passwords doesn\'t match</string>
    <string name="crypto_default_currency">BTC/USD</string>
    <string name="chip_24hr">24 Hours</string>
    <string name="chip_7d">7 Days</string>
    <string name="chip_1w">1 Week</string>
    <string name="chip_1m">1 Month</string>
    <string name="chip_1y">1 Year</string>
    <string name="chip_6y">6 Year</string>
    <string name="daily_change">24H</string>
    <string name="volume">Vol</string>
    <string name="market_cap">Cap</string>
    <string name="coin_rank">Rank</string>
    <string name="coin_supply">Supply</string>
    <string name="coin_circulating">circulating</string>
    <string name="coin_btc_price">BTC Price</string>
    <string name="coin_all_time_high">All time high</string>
    <string name="coin_ath_date">date</string>
    <string name="coin_description">Description</string>
    <string name="undefined">undefined</string>
    <string name="description_not_found">Description not found.</string>
    <string name="bottom_nav_currencies">Currencies</string>
    <string name="bottom_nav_exchanges">Exchanges</string>
    <string name="bottom_nav_watch_lists">Watch lists</string>
    <string name="bottom_nav_news">News</string>
    <string name="chip_sort_by">Sort by</string>
    <string name="chip_time_period">Time period</string>
    <string name="chip_tags">Tags</string>
    <string name="user_email">Email</string>
    <string name="registration_date">Registration date</string>
    <string name="last_sign_in_date">Last sign in date</string>
    <string name="user_update_password">Update password</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again">Try again</string>
    <string name="retry">Retry</string>
    <string name="crypto_value_changes">Cryptocurrency value changes</string>
    <string name="no_data_found">No data found for chart</string>
    <string name="general_close_confirmation_title">Are you sure?</string>
    <string name="general_close_confirmation_message">Do you want to leave the app?</string>
    <string name="general_close_confirmation_positive">Leave</string>
    <string name="general_close_confirmation_negative">Cancel</string>
    <string name="crypto_details_back_stack_tag">crypto_details_tag</string>
    <string name="exchange_details_back_stack_tag">exchange_details_tag</string>
    <string name="profile_back_stack_tag">profile</string>
    <string name="sign_out">Sign out</string>
    <string name="general_sign_out_confirmation_message">Do you want to sing out?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOG IN</string>
    <string name="bottom_nav_market">Market</string>
    <string name="crypto_currency">Cryptocurrency</string>
    <string name="categories">Categories</string>
    <string name="exchanges">Exchanges</string>
    <string name="bottom_nav_home">Home</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="exchange_volume_changes">Exchange volume changes</string>
    <string name="chip_max">Max</string>
    <string name="exchange">Exchange</string>
    <string name="profile">Profile</string>
    <string name="news">News</string>
    <string name="market">Market</string>
    <string name="detail">Detail</string>
    <string name="empty">empty</string>
    <string name="year_established">Est</string>
    <string name="empty_watchlist">Your watchlist is empty</string>
    <string name="add_to_watchlist">Add cryptocurrency</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User name</string>
    <string name="enter_user_name">Enter your name</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="anonymous_account">Anonymous account</string>
    <string name="update_profile">Update Profile</string>
    <string name="watch_list">Watch List</string>
    <string name="total_coin">Total coins:</string>
    <string name="total_change">Accumulated volume change:</string>
    <string name="total_volume">Accumulated volume:</string>
    <string name="total_market_cap">Accumulated market cap:</string>
    <string name="profile_info">Profile information</string>
    <string name="account_info">Account information</string>
</resources>