<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    <variable
        name="uiModel"
        type="com.example.cryptoapp.feature.screen.main.cryptocurrency.cryptocurrencyDetails.CryptoCurrencyDetailsListItem.CryptoCurrencyBody" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/crypto_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/coin_rank"
            style="@style/TextAppearance.CryptoApp.Subtitle1"
            android:layout_marginStart="@dimen/content_padding"
            android:layout_marginTop="@dimen/small_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/delimiter_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/small_padding"
            android:background="?android:attr/dividerVertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crypto_rank" />

        <TextView
            android:id="@+id/crypto_supply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/content_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/coin_supply"
            style="@style/TextAppearance.CryptoApp.Subtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delimiter_1" />

        <TextView
            android:id="@+id/crypto_circulating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_padding"
            android:text="@string/coin_circulating"
            style="@style/TextAppearance.CryptoApp.Subtitle2"
            android:layout_marginTop="@dimen/small_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crypto_supply" />

        <View
            android:id="@+id/delimiter_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/small_padding"
            android:background="?android:attr/dividerVertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crypto_circulating" />

        <TextView
            android:id="@+id/crypto_btc_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/content_padding"
            android:text="@string/coin_btc_price"
            style="@style/TextAppearance.CryptoApp.Subtitle1"
            android:layout_marginTop="@dimen/small_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delimiter_2" />

        <View
            android:id="@+id/delimiter_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/small_padding"
            android:background="?android:attr/dividerVertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crypto_btc_price" />

        <TextView
            android:id="@+id/crypto_all_time_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/content_padding"
            android:text="@string/coin_all_time_high"
            style="@style/TextAppearance.CryptoApp.Subtitle1"
            android:layout_marginTop="@dimen/small_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delimiter_3" />

        <TextView
            android:id="@+id/crypto_all_time_high_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_padding"
            android:text="@string/coin_ath_date"
            style="@style/TextAppearance.CryptoApp.Subtitle2"
            android:layout_marginTop="@dimen/small_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crypto_all_time_high" />

        <View
            android:id="@+id/delimiter_4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/small_padding"
            android:background="?android:attr/dividerVertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crypto_all_time_high_date" />

        <TextView
            android:id="@+id/crypto_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_padding"
            android:text="@string/coin_description"
            android:textStyle="bold"
            style="@style/TextAppearance.CryptoApp.Subtitle1"
            android:layout_marginTop="@dimen/small_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delimiter_4" />

        <TextView
            android:id="@+id/crypto_rank_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/content_padding"
            android:text="@{uiModel.rank}"
            style="@style/TextAppearance.CryptoApp.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/crypto_rank"
            tools:text="Undefined" />

        <TextView
            android:id="@+id/crypto_supply_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/content_padding"
            android:text="@{uiModel.supply}"
            style="@style/TextAppearance.CryptoApp.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/crypto_supply"
            tools:text="Undefined" />

        <TextView
            android:id="@+id/crypto_circulating_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/content_padding"
            android:text="@{uiModel.circulating}"
            style="@style/TextAppearance.CryptoApp.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/crypto_circulating"
            tools:text="Undefined" />

        <TextView
            android:id="@+id/crypto_btc_rice_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/content_padding"
            android:text="@{uiModel.btcPrice}"
            style="@style/TextAppearance.CryptoApp.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/crypto_btc_price"
            tools:text="Undefined" />

        <TextView
            android:id="@+id/crypto_all_time_high_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/content_padding"
            android:text="@{uiModel.allTimeHighPrice}"
            style="@style/TextAppearance.CryptoApp.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/crypto_all_time_high"
            tools:text="Undefined" />

        <TextView
            android:id="@+id/crypto_all_time_high_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/content_padding"
            android:text="@{uiModel.allTimeHighDate}"
            style="@style/TextAppearance.CryptoApp.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/crypto_all_time_high_date"
            tools:text="Undefined" />

        <TextView
            android:id="@+id/crypto_description_text"
            android:scrollbars = "vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:layout_marginStart="@dimen/recycler_view_text_width"
            android:layout_marginEnd="@dimen/recycler_view_text_width"
            android:layout_marginTop="@dimen/content_padding"
            android:text="@{uiModel.description}"
            tools:text="Description"
            style="@style/TextAppearance.CryptoApp.Subtitle2"
            android:textAlignment="center"
            android:ellipsize="end"
            android:inputType="none"
            android:maxLines="300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crypto_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>