<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.cryptoapp.feature.screen.auth.login.LoginViewModel" />

    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".feature.screen.auth.login.LoginFragment">

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/reset_password_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:layout_marginTop="200dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:errorEnabled="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#000"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            style="@style/TextAppearance.CryptoApp.Button"
            android:enabled="@{viewModel.isLoginEnabled}"
            android:onClick="@{() -> viewModel.loginWithEmailAndPassword()}"
            />

        <TextView
            android:id="@+id/sign_up"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/TextAppearance.CryptoApp.Body1"
            android:onClick="@{() -> viewModel.onRegisterClicked()}"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/TextAppearance.CryptoApp.Body1"
            android:onClick="@{() -> viewModel.onResetPasswordClicked()}"
            android:text="@string/forgot_password" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:isVisible="@{viewModel.isLoading}"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</layout>